--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm iinstall oauth-sign
+            npm install oauth-sign
             npm run test
                 
   test-backend:
