--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,8 +106,9 @@ jobs:
       - run:
           name: Scan front-end
           command: |
-            exit 0
-            npm audit
+            cd frontend
+            npm install
+            npm audit --audit-level=critical
 
   scan-backend:
     docker:
@@ -119,8 +120,9 @@ jobs:
       - run:
           name: Scan front-end
           command: |
-            exit 0
-            npm audit
+            cd frontend
+            npm install
+            npm audit --audit-level=critical
 
 #   deploy-infrastructure:
 #     docker:
