--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: "Add Node.js from Nodesource"
   become: true
   shell: |
-    curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash
+    curl -sL https://deb.nodesource.com/setup_13.x | sudo bash -
 
 - name: "Install Nod.js 13"
   become: true
@@ -14,4 +14,3 @@
   npm:
     name: pm2
     global: yes
-    
