--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -301,8 +301,8 @@ jobs:
           fingerprints: ["8d:8e:57:a9:4f:70:ef:71:6c:67:1f:fe:70:57:b7:25"]
       - attach_workspace:
           at: ~/
-      - restore_cashe:
-          Keys: [backend-build]
+      - restore_cache:
+          keys: [backend-build]
       - run:
           name: Install dependencies
           command: |
