--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -314,9 +314,9 @@ jobs:
             cd backend
             npm run build
             tar -czf artifact.tar.gz dist/* package*
-            ls
+            
             cd ..
-            cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/files
+            cp backend/artifact.tar.gz /home/circleci/project/.circleci/ansible/roles/deploy/files
       - run:
           name: Deploy backend
           command: |
