--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -6,10 +6,14 @@
 
 - name: "ls"
   command: ls
+  register: command_output
+
+- debug:
+    var: command_output.stdout_lines  
 
 - name: "Unarchive backend files"
   unarchive:
-    src: artifact.tar.gz
+    src: /home/circleci/project/.circleci/ansible/roles/deploy/files/artifact.tar.gz
     dest: ~/backend-app
 
 - name: "Installing Node Dependencies"
