--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -4,8 +4,13 @@
     path: ~/backend-app
     state: directory
 
+- name: check permission
+  ansible.builtin.file:
+    path: /home/circleci/project/.circleci/ansible/roles/deploy/files/artifact.tar.gz
+    mode: '0777'
+
 - name: "ls"
-  command: ls
+  command: ls -l /home/circleci/project/.circleci/ansible/roles/deploy/files
   register: command_output
 
 - debug:
