--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -273,7 +273,7 @@ jobs:
           name: Get backend url
           command: |
             BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
-            --filters "Name=tag:Name,Values=backend-<IDENTIFIER>" \
+            --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --output text)
             # export API_URL="http://$BACKEND_PUBLIC_IP:3030"
@@ -331,62 +331,56 @@ jobs:
       - destroy-environment
       - revert-migrations      
 
-#   smoke-test:
-#     docker:
-#       # Lightweight Docker image 
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             # your code here
-#       - run:
-#           name: Get backend url
-#           command: |
-#             # your code here
-#       - run:
-#           name: Backend smoke test.
-#           command: |
-#             # your code here
-#       - run:
-#           name: Frontend smoke test.
-#           command: |
-#             # your code here
-#       # Here's where you will add some code to rollback on failure  
+    # smoke-test:
+    #   docker:
+    #     - image: cimg/base:stable
+    #   steps:
+    #     - checkout
+    #     - install_awscli
+    #     - install_nodejs
+    #     - run:
+    #         name: Backend smoke test.
+    #         command: |
+    #           # your code here
+    #     - run:
+    #         name: Frontend smoke test.
+    #         command: |
+    #           # your code here
+    #     # Here's where you will add some code to rollback on failure  
 
-#   cloudfront-update:
-#     docker:
-#       # Docker image here that supports AWS CLI
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             # your code here
-#       - run:
-#           name: Update cloudfront distribution
-#           command: |
-#             # your code here
-#       # Here's where you will add some code to rollback on failure  
+  #   cloudfront-update:
+  #     docker:
+  #       # Docker image here that supports AWS CLI
+  #     steps:
+  #       # Checkout code from git
+  #       - run:
+  #           name: Install dependencies
+  #           command: |
+  #             # your code here
+  #       - run:
+  #           name: Update cloudfront distribution
+  #           command: |
+  #             # your code here
+  #       # Here's where you will add some code to rollback on failure  
 
-# cleanup:
-#     docker:
-#       # Docker image here
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Get old stack workflow id
-#           command: |
-#             # your code here
-#             export OldWorkflowID="the id here"
-#             export STACKS=[] #put the list of stacks here
-#       - run:
-#           name: Remove old stacks and files
-#           command: |
-#             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
-#             then
-#               # your code here
-#             fi
+  # cleanup:
+  #     docker:
+  #       # Docker image here
+  #     steps:
+  #       # Checkout code from git
+  #       - run:
+  #           name: Get old stack workflow id
+  #           command: |
+  #             # your code here
+  #             export OldWorkflowID="the id here"
+  #             export STACKS=[] #put the list of stacks here
+  #       - run:
+  #           name: Remove old stacks and files
+  #           command: |
+  #             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+  #             then
+  #               # your code here
+  #             fi
             
 
 workflows:
