--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -415,8 +415,8 @@ jobs:
               if[[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
               then
                 aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-                aws clouddormation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-                aws clouddormation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+                aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+                aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
               fi
 
         - run:
