--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -406,7 +406,7 @@ jobs:
             command: |
               export STACKS=($(aws cloudformation list-stacks \
                   --query "StackSummaries[*].StackName" \ 
-                  --stack-status-filter CREAT_COMPLETE --no-paginate --output text))
+                  --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
               echo Stack names: "${STACKS[@]}"
 
               export OldWorkflowID=$(curl --insecure https://kvdb.io/${KVDB_BUCKET}/old_workflow_id)
