--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -388,8 +388,9 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
-              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
-              --stack-name InitialStack
+              --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --stack-name InitialStack \
+              --tags project=udapeople
       - destroy-environment
       - revert-migrations
 
