--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -389,8 +389,8 @@ jobs:
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
               --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --stack-name InitialStack \
-              --tags project=udapeople
+              --stack-name InitialStack 
+              # --tags project=udapeople
       - destroy-environment
       - revert-migrations
 
