--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -379,11 +379,11 @@ jobs:
           name: Save Old Workflow ID to kvdb.io
           command: |
             export OLD_WORKFLOW_ID=$(aws cloudformation \
-                      list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-                      --no-paginate --output text)
-            echo "Old Wokflow ID: $OLD_WORKFLOW_ID"
-            #curl -k https://kvdb.io/${KVDB_BUCKET}/old_workflow_id -d "${OLD_WORKFLOW_ID}"
-            curl https://kvdb.io/$${KVDB_BUCKET}/old_workflow_id -d "${OLD_WORKFLOW_ID}"
+                list-exports --query "Exports[?Name==\'WorkflowID\'].value"\
+                --no-paginate --output text)
+            echo "Old Workflow ID: $OLD_WORKFLOW_ID"
+            curl https://kvdb.io/${KVDB_BUCKET}/old_workflow_id -d "$OLD_WORKFLOW_ID"
+
       - run:
           name: Update cloudfront distribution
           command: |
