--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -31,7 +31,7 @@ Resources:
     Properties:
       InstanceType: t2.micro
       SecurityGroups:
-        - Ref: InstanceSecurityGroup
+        - Ref: 'InstanceSecurityGroup'
       KeyName: udacity 
       ImageId: ami-0d70546e43a941d70 
       Tags:
